bdr.BDR2.scala.error
Compilation error:
BDR2:12: error: ';' expected but ',' found.
  case "Y"=> recule(),recule()
                     ^BDR2:18: error: '=>' expected but '}' found.
}
^